<resources>
    <string name="app_name">Storilia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cd_image_login">Image Login</string>
    <string name="cd_image_signUp">Image Sign up</string>
    <string name="text_title_login">Ready to share your stories today?</string>
    <string name="text_subtitle_login">Input your data first !</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_or_sign_up_using">Or Sign Up Using</string>
    <string name="text_hint_email">Enter your email</string>
    <string name="valid_email_id">Email must valid</string>
    <string name="valid_password">password minimum 6 characters</string>
    <string name="text_hint_password">password minimum 6 characters</string>
    <string name="text_submit">Submit</string>
    <string name="text_input_first">Please Input First</string>
    <string name="text_hint_name">Enter Your Name</string>
    <string name="title_register_page">Fill your detail below</string>
    <string name="text_name">Name</string>
    <string name="text_loading">Loading</string>
    <string name="title_map">Map</string>
    <string name="cd_image_story">Image Story</string>
    <string name="text_username">Username</string>
    <string name="text_retry">retry</string>
    <string name="text_description">Description</string>
    <string name="cd_add">Add</string>
    <string name="cd_location">Location</string>
    <string name="text_story">Story</string>
    <string name="text_capture_by">"Capture by %s"</string>
    <string name="text_parsing_failed">Style parsing failed.</string>
    <string name="text_error_cant_find_style">\"Can\'t find style. Error: \"</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="text_logout">Logout</string>
    <string name="text_logout_success">Logout Success</string>
</resources>